--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,12 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-syntax-jsx": "^7.22.5",
     "@codemirror/commands": "^6.1.1",
     "@codemirror/lang-python": "^6.0.2",
     "@dnd-kit/core": "^6.0.8",
     "@dnd-kit/sortable": "^7.0.2",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "@fortawesome/fontawesome-free": "^6.4.2",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.9.3",
     "@mui/x-data-grid": "^6.0.4",
@@ -31,6 +38,7 @@
     "@types/styled-components": "^5.1.26",
     "@uiw/react-codemirror": "^4.12.3",
     "axios": "0.27.2",
+    "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.2.1",
     "chart.js": "^4.2.1",
     "chartjs-adapter-date-fns": "^3.0.0",
@@ -47,6 +55,7 @@
     "next-redux-wrapper": "^8.1.0",
     "openai": "^3.3.0",
     "plotly.js": "^2.18.2",
+    "prettier": "^3.0.3",
     "pretty-bytes": "^6.1.0",
     "prop-types": "^15.8.1",
     "rc-progress": "^3.4.0",
