Prettier js fix

--- a/.github/ISSUE_TEMPLATE/sweep-bugfix.yml
+++ b/.github/ISSUE_TEMPLATE/sweep-bugfix.yml
@@ -1,5 +1,5 @@
-name: '🤖 Sweep: Bugfix'
-title: 'Sweep: '
+name: "🤖 Sweep: Bugfix"
+title: "Sweep: "
 description: Sweep-automated bugfix request
 labels: ["sweep"]
 body:
