--- a/.github/ISSUE_TEMPLATE/sweep-feature.yml
+++ b/.github/ISSUE_TEMPLATE/sweep-feature.yml
@@ -1,5 +1,5 @@
-name: '🤖 Sweep: Feature Request'
-title: 'Sweep: '
+name: "🤖 Sweep: Feature Request"
+title: "Sweep: "
 description: Sweep-automated feature request
 labels: ["sweep"]
 body:
