--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -16,7 +16,6 @@ jobs:
         if: steps.action_black.outputs.is_formatted == 'true'
         with:
           commit_message: ":art: Format Python code with psf/black"
-          commit_options: '--no-verify'
+          commit_options: "--no-verify"
           commit_user_name: github-actions
           commit_user_email: ghaction@github.com
-          
