--- a/.github/workflows/railway-deploy.yml
+++ b/.github/workflows/railway-deploy.yml
@@ -5,13 +5,13 @@ on:
   workflow_dispatch:
     inputs:
       environment:
-        description: 'Deployment environment'
+        description: "Deployment environment"
         required: true
-        default: 'Development'
+        default: "Development"
         type: choice
         options:
-        - Development
-        - Preview
+          - Development
+          - Preview
 
 jobs:
   check_trigger:
@@ -22,7 +22,7 @@ jobs:
         run: echo ::set-output name=to_run::${{ ((github.event.label.name == 'deploy') || (github.event_name == 'workflow_dispatch')) && 'True' || 'False' }}
     outputs:
       status: ${{ steps.check.outputs.to_run }}
-  
+
   deploy:
     runs-on: ubuntu-latest
     needs: check_trigger
@@ -37,7 +37,7 @@ jobs:
       - name: Remove Label
         uses: andymckay/labeler@master
         with:
-          remove-labels: 'deploy'
+          remove-labels: "deploy"
 
       - name: Set Railway Token and Link
         id: railway_config
@@ -84,7 +84,7 @@ jobs:
           environment_url: ${{ steps.railway_config.outputs.link }}
           state: "success"
           deployment_id: ${{ steps.deployment.outputs.deployment_id }}
-      
+
       - name: Comment Deployment on PR
         if: success() && (github.event_name == 'pull_request')
         uses: thollander/actions-comment-pull-request@v1
@@ -99,5 +99,3 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           state: "failure"
           deployment_id: ${{ steps.deployment.outputs.deployment_id }}
-
-
