--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
   },
   "homepage": "https://github.com/DSGT-DLP/Deep-Learning-Playground#readme",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "mamba": "^0.0.2"
   }
 }
