beginner project part 2

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "@dnd-kit/sortable": "^7.0.2",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "@fortawesome/free-brands-svg-icons": "^6.5.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.9.3",
     "@mui/x-data-grid": "^6.0.4",
@@ -37,6 +39,7 @@
     "crypto-js": "^4.1.1",
     "file-saver": "^2.0.5",
     "firebase": "^9.9.3",
+    "font-awesome": "^4.7.0",
     "gestalt": "^101.3.9",
     "gestalt-datepicker": "^101.3.9",
     "jszip": "^3.10.1",
