--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
   },
   "homepage": "https://github.com/DSGT-DLP/Deep-Learning-Playground#readme",
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.5.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "mamba": "^0.0.2"
   }
 }
